mainapp/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mainapp
  name: hy-kube-mainapp-svc
spec:
  type: ClusterIP
  selector:
    app: hy-kube-mainapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
